--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.1.0"
 edition = "2024"
 default-run = "midenid-contracts"
 
+[[bin]]
+name = "deploy"
+path = "src/deploy/deploy.rs"
+
+[[bin]]
+name = "list_accounts"
+path = "src/deploy/list_accounts.rs"
+
+[[bin]]
+name = "export_account"
+path = "src/deploy/export_account.rs"
+
 [dependencies]
 miden-client = { version = "0.11.4", features = ["testing", "tonic", "sqlite"] }
 miden-lib = { version = "0.11.2", default-features = false }
@@ -16,3 +28,4 @@ serde_json = { version = "1.0", features = ["raw_value"] }
 tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
 rand_chacha = "0.9.0"
 miden-client-tools = "0.2.4"
+chrono = "0.4"
