--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ miden-lib = { version = "0.11.2", default-features = false }
 miden-objects = { version = "0.11.2", default-features = false, features = ["testing"] }
 miden-crypto = { version = "0.15.9", features = ["executable"] }
 miden-assembly = "0.17.0"
+miden-testing = "0.11.4"
 rand = { version = "0.9" }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1.0", features = ["raw_value"] }
@@ -29,3 +30,4 @@ tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"
 rand_chacha = "0.9.0"
 miden-client-tools = "0.2.4"
 chrono = "0.4"
+anyhow = "1"
