--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"
 rand_chacha = "0.9.0"
 miden-client-tools = "0.2.4"
 chrono = "0.4"
+
+[dev-dependencies]
+miden-testing = "0.11.2"
