--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 # Miden Name Registry Deployment Configuration
 MIDEN_NETWORK=testnet
-PRICE_1_LETTER=250
-PRICE_2_LETTER=150
-PRICE_3_LETTER=85
-PRICE_4_LETTER=40
-PRICE_5_LETTER=25
+PRICE_1_LETTER=250000000
+PRICE_2_LETTER=150000000
+PRICE_3_LETTER=85000000
+PRICE_4_LETTER=40000000
+PRICE_5_LETTER=25000000
 PRICING_SETTER_ACCOUNT=0x123
 NAMING_OWNER_ACCOUNT=0x345
 NAMING_TREASURY_ACCOUNT=0x777
