--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ PRICE_5_LETTER=25000000
 PRICING_SETTER_ACCOUNT=0x123
 NAMING_OWNER_ACCOUNT=0x345
 NAMING_TREASURY_ACCOUNT=0x777
+PRICING_TOKEN_ADDRESS=0x888
